# token-trace-demo

./: README.md  app.py  pyproject.toml  pyproject.toml.temp  requirements.txt
app/: Dockerfile  docker-compose.yaml
data/28073a65f0596b26/: args.json  metadata.json
data/497e3b23528c9d21/: args.json  metadata.json
data/6992989f10902784/: args.json  metadata.json
data/d4e8742f253fcfdd/: args.json  metadata.json
src/token_trace_demo/: builder.py  circuit.py  constants.py  load_pretrained_model.py  node_attribution.py  sae_activation_cache.py  utils.py
src/token_trace_demo/app/: load_data.py  precompute_circuits.py  process_data.py  run_app.py  utils.py
tests/: test_circuit.py
